{
  "version": 4,
  "terraform_version": "1.3.0",
  "serial": 135,
  "lineage": "dae3d2a5-b221-8332-1006-b18cbcb8800d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tch_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a750371997a814a7",
            "arn": "arn:aws:ec2:eu-central-1:584871003262:instance/i-041c1b7b406f15839",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-041c1b7b406f15839",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tch_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0c7d9898f9cb9f004"
              }
            ],
            "primary_network_interface_id": "eni-0c7d9898f9cb9f004",
            "private_dns": "ip-10-0-1-4.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.4",
            "public_dns": "ec2-3-70-168-145.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.70.168.145",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06491374b6e71ad90",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fcb19f53e7143b06",
            "tags": {
              "Name": "tch"
            },
            "tags_all": {
              "Name": "tch"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0662d98a48b3caf0a",
              "sg-0fcdd2d450c202495"
            ]
          },
          "dependencies": [
            "aws_key_pair.tch_key_pair",
            "aws_network_interface.tch_ec2_network_interface",
            "aws_security_group.allow_http",
            "aws_security_group.allow_ssh",
            "aws_subnet.tch_subnet",
            "aws_vpc.tch_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tch_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:584871003262:internet-gateway/igw-049cc3e6961d7d3f1",
            "id": "igw-049cc3e6961d7d3f1",
            "owner_id": "584871003262",
            "tags": {
              "Name": "tch"
            },
            "tags_all": {
              "Name": "tch"
            },
            "vpc_id": "vpc-06493540771311acb"
          },
          "dependencies": [
            "aws_vpc.tch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "tch_ec2_network_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:584871003262:network-interface/eni-0c7d9898f9cb9f004",
            "attachment": [
              {
                "attachment_id": "eni-attach-04407b6c727656cd9",
                "device_index": 0,
                "instance": "i-041c1b7b406f15839"
              }
            ],
            "id": "eni-0c7d9898f9cb9f004",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:34:02:8e:47:3e",
            "owner_id": "584871003262",
            "private_dns_name": "ip-10-0-1-4.eu-central-1.compute.internal",
            "private_ip": "10.0.1.4",
            "private_ip_list": [
              "10.0.1.4"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.4"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0662d98a48b3caf0a",
              "sg-0fcdd2d450c202495"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fcb19f53e7143b06",
            "tags": {
              "Name": "primary_network_interface"
            },
            "tags_all": {
              "Name": "primary_network_interface"
            }
          },
          "dependencies": [
            "aws_security_group.allow_http",
            "aws_security_group.allow_ssh",
            "aws_subnet.tch_subnet",
            "aws_vpc.tch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tch_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:584871003262:route-table/rtb-076354cc20d3f24c0",
            "id": "rtb-076354cc20d3f24c0",
            "owner_id": "584871003262",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-049cc3e6961d7d3f1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tch"
            },
            "tags_all": {
              "Name": "tch"
            },
            "timeouts": null,
            "vpc_id": "vpc-06493540771311acb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tch_gateway",
            "aws_vpc.tch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tch_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08106ed1fb0c231ea",
            "route_table_id": "rtb-076354cc20d3f24c0",
            "subnet_id": "subnet-0fcb19f53e7143b06"
          },
          "dependencies": [
            "aws_internet_gateway.tch_gateway",
            "aws_route_table.tch_route_table",
            "aws_subnet.tch_subnet",
            "aws_vpc.tch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:584871003262:security-group/sg-0fcdd2d450c202495",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fcdd2d450c202495",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "584871003262",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http"
            },
            "tags_all": {
              "Name": "allow_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-06493540771311acb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:584871003262:security-group/sg-0662d98a48b3caf0a",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0662d98a48b3caf0a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "584871003262",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-06493540771311acb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tch_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:584871003262:subnet/subnet-0fcb19f53e7143b06",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fcb19f53e7143b06",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "584871003262",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tch"
            },
            "tags_all": {
              "Name": "tch"
            },
            "vpc_id": "vpc-06493540771311acb"
          },
          "dependencies": [
            "aws_vpc.tch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tch_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:584871003262:vpc/vpc-06493540771311acb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-064a59e6a1aa117ca",
            "default_route_table_id": "rtb-0cb5a1bb864aa5667",
            "default_security_group_id": "sg-0000627c87106476f",
            "dhcp_options_id": "dopt-0d918768184a27df4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06493540771311acb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cb5a1bb864aa5667",
            "owner_id": "584871003262",
            "tags": {
              "Name": "tch"
            },
            "tags_all": {
              "Name": "tch"
            }
          }
        }
      ]
    }
  ]
}